NanoVG/nanovg.h

	typedef struct NVGcontext NVGcontext;
	struct NVGcolor {
		union {
			float rgba[4];
			struct {
				float r, g, b, a;
			};
		};
	};
	typedef struct NVGcolor NVGcolor;
	struct NVGpaint {
		float xform[6];
		float extent[2];
		float radius;
		float feather;
		NVGcolor innerColor;
		NVGcolor outerColor;
		int image;
	};
	typedef struct NVGpaint NVGpaint;
	struct NVGglyphPosition {
		const char* str;	// Position of the glyph in the input string.
		float x;			// The x-coordinate of the logical glyph position.
		float minx, maxx;	// The bounds of the glyph shape.
	};
	typedef struct NVGglyphPosition NVGglyphPosition;
	struct NVGtextRow {
		const char* start;	// Pointer to the input text where the row starts.
		const char* end;	// Pointer to the input text where the row ends (one past the last character).
		const char* next;	// Pointer to the beginning of the next row.
		float width;		// Logical width of the row.
		float minx, maxx;	// Actual bounds of the row. Logical with and bounds can differ because of kerning and some parts over extending.
	};
	typedef struct NVGtextRow NVGtextRow;
	// Begin drawing a new frame
	// Calls to nanovg drawing API should be wrapped in nvgBeginFrame() & nvgEndFrame()
	// nvgBeginFrame() defines the size of the window to render to in relation currently
	// set viewport (i.e. glViewport on GL backends). Device pixel ration allows to
	// control the rendering on Hi-DPI devices.
	// For example, GLFW returns two dimension for an opened window: window size and
	// frame buffer size. In that case you would set windowWidth/Height to the window size
	// devicePixelRatio to: frameBufferWidth / windowWidth.
	NANOVG_EXPORT void nvgBeginFrame(NVGcontext* ctx, int windowWidth, int windowHeight, float devicePixelRatio);
	// Cancels drawing the current frame.
	NANOVG_EXPORT void nvgCancelFrame(NVGcontext* ctx);
	// Ends drawing flushing remaining render state.
	NANOVG_EXPORT void nvgEndFrame(NVGcontext* ctx);
	//
	// Composite operation
	//
	// The composite operations in NanoVG are modeled after HTML Canvas API, and
	// the blend func is based on OpenGL (see corresponding manuals for more info).
	// The colors in the blending state have premultiplied alpha.

	// Sets the composite operation. The op parameter should be one of NVGcompositeOperation.
	NANOVG_EXPORT void nvgGlobalCompositeOperation(NVGcontext* ctx, int op);
	// Sets the composite operation with custom pixel arithmetic. The parameters should be one of NVGblendFactor.
	NANOVG_EXPORT void nvgGlobalCompositeBlendFunc(NVGcontext* ctx, int sfactor, int dfactor);
	// Sets the composite operation with custom pixel arithmetic for RGB and alpha components separately. The parameters should be one of NVGblendFactor.
	NANOVG_EXPORT void nvgGlobalCompositeBlendFuncSeparate(NVGcontext* ctx, int srcRGB, int dstRGB, int srcAlpha, int dstAlpha);
	//
	// Color utils
	//
	// Colors in NanoVG are stored as unsigned ints in ABGR format.

	// Returns a color value from red, green, blue values. Alpha will be set to 255 (1.0f).
	NANOVG_EXPORT NVGcolor nvgRGB(unsigned char r, unsigned char g, unsigned char b);
	// Returns a color value from red, green, blue values. Alpha will be set to 1.0f.
	NANOVG_EXPORT NVGcolor nvgRGBf(float r, float g, float b);
	// Returns a color value from red, green, blue and alpha values.
	NANOVG_EXPORT NVGcolor nvgRGBA(unsigned char r, unsigned char g, unsigned char b, unsigned char a);
	// Returns a color value from red, green, blue and alpha values.
	NANOVG_EXPORT NVGcolor nvgRGBAf(float r, float g, float b, float a);
	// Linearly interpolates from color c0 to c1, and returns resulting color value.
	NANOVG_EXPORT NVGcolor nvgLerpRGBA(NVGcolor c0, NVGcolor c1, float u);
	// Sets transparency of a color value.
	NANOVG_EXPORT NVGcolor nvgTransRGBA(NVGcolor c0, unsigned char a);
	// Sets transparency of a color value.
	NANOVG_EXPORT NVGcolor nvgTransRGBAf(NVGcolor c0, float a);
	// Returns color value specified by hue, saturation and lightness.
	// HSL values are all in range [0..1], alpha will be set to 255.
	NANOVG_EXPORT NVGcolor nvgHSL(float h, float s, float l);
	// Returns color value specified by hue, saturation and lightness and alpha.
	// HSL values are all in range [0..1], alpha in range [0..255]
	NANOVG_EXPORT NVGcolor nvgHSLA(float h, float s, float l, unsigned char a);
	//
	// State Handling
	//
	// NanoVG contains state which represents how paths will be rendered.
	// The state contains transform, fill and stroke styles, text and font styles,
	// and scissor clipping.

	// Pushes and saves the current render state into a state stack.
	// A matching nvgRestore() must be used to restore the state.
	NANOVG_EXPORT void nvgSave(NVGcontext* ctx);
	// Pops and restores current render state.
	NANOVG_EXPORT void nvgRestore(NVGcontext* ctx);
	// Resets current render state to default values. Does not affect the render state stack.
	NANOVG_EXPORT void nvgReset(NVGcontext* ctx);
	//
	// Render styles
	//
	// Fill and stroke render style can be either a solid color or a paint which is a gradient or a pattern.
	// Solid color is simply defined as a color value, different kinds of paints can be created
	// using nvgLinearGradient(), nvgBoxGradient(), nvgRadialGradient() and nvgImagePattern().
	//
	// Current render style can be saved and restored using nvgSave() and nvgRestore().

	// Sets current stroke style to a solid color.
	NANOVG_EXPORT void nvgStrokeColor(NVGcontext* ctx, NVGcolor color);
	// Sets current stroke style to a paint, which can be a one of the gradients or a pattern.
	NANOVG_EXPORT void nvgStrokePaint(NVGcontext* ctx, NVGpaint paint);
	// Sets current fill style to a solid color.
	NANOVG_EXPORT void nvgFillColor(NVGcontext* ctx, NVGcolor color);
	// Sets current fill style to a paint, which can be a one of the gradients or a pattern.
	NANOVG_EXPORT void nvgFillPaint(NVGcontext* ctx, NVGpaint paint);
	// Sets the miter limit of the stroke style.
	// Miter limit controls when a sharp corner is beveled.
	NANOVG_EXPORT void nvgMiterLimit(NVGcontext* ctx, float limit);
	// Sets the stroke width of the stroke style.
	NANOVG_EXPORT void nvgStrokeWidth(NVGcontext* ctx, float size);
	// Sets how the end of the line (cap) is drawn,
	// Can be one of: NVG_BUTT (default), NVG_ROUND, NVG_SQUARE.
	NANOVG_EXPORT void nvgLineCap(NVGcontext* ctx, int cap);
	// Sets how sharp path corners are drawn.
	// Can be one of NVG_MITER (default), NVG_ROUND, NVG_BEVEL.
	NANOVG_EXPORT void nvgLineJoin(NVGcontext* ctx, int join);
	// Sets the transparency applied to all rendered shapes.
	// Already transparent paths will get proportionally more transparent as well.
	NANOVG_EXPORT void nvgGlobalAlpha(NVGcontext* ctx, float alpha);
	//
	// Transforms
	//
	// The paths, gradients, patterns and scissor region are transformed by an transformation
	// matrix at the time when they are passed to the API.
	// The current transformation matrix is a affine matrix:
	//   [sx kx tx]
	//   [ky sy ty]
	//   [ 0  0  1]
	// Where: sx,sy define scaling, kx,ky skewing, and tx,ty translation.
	// The last row is assumed to be 0,0,1 and is not stored.
	//
	// Apart from nvgResetTransform(), each transformation function first creates
	// specific transformation matrix and pre-multiplies the current transformation by it.
	//
	// Current coordinate system (transformation) can be saved and restored using nvgSave() and nvgRestore().

	// Resets current transform to a identity matrix.
	NANOVG_EXPORT void nvgResetTransform(NVGcontext* ctx);
	// Premultiplies current coordinate system by specified matrix.
	// The parameters are interpreted as matrix as follows:
	//   [a c e]
	//   [b d f]
	//   [0 0 1]
	NANOVG_EXPORT void nvgTransform(NVGcontext* ctx, float a, float b, float c, float d, float e, float f);
	// Translates current coordinate system.
	NANOVG_EXPORT void nvgTranslate(NVGcontext* ctx, float x, float y);
	// Rotates current coordinate system. Angle is specified in radians.
	NANOVG_EXPORT void nvgRotate(NVGcontext* ctx, float angle);
	// Skews the current coordinate system along X axis. Angle is specified in radians.
	NANOVG_EXPORT void nvgSkewX(NVGcontext* ctx, float angle);
	// Skews the current coordinate system along Y axis. Angle is specified in radians.
	NANOVG_EXPORT void nvgSkewY(NVGcontext* ctx, float angle);
	// Scales the current coordinate system.
	NANOVG_EXPORT void nvgScale(NVGcontext* ctx, float x, float y);
	// Stores the top part (a-f) of the current transformation matrix in to the specified buffer.
	//   [a c e]
	//   [b d f]
	//   [0 0 1]
	// There should be space for 6 floats in the return buffer for the values a-f.
	NANOVG_EXPORT void nvgCurrentTransform(NVGcontext* ctx, float* xform);
	// The following functions can be used to make calculations on 2x3 transformation matrices.
	// A 2x3 matrix is represented as float[6].

	// Sets the transform to identity matrix.
	NANOVG_EXPORT void nvgTransformIdentity(float* dst);
	// Sets the transform to translation matrix matrix.
	NANOVG_EXPORT void nvgTransformTranslate(float* dst, float tx, float ty);
	// Sets the transform to scale matrix.
	NANOVG_EXPORT void nvgTransformScale(float* dst, float sx, float sy);