NanoVG/nanovg_gl.h

	// Create flags

	enum NVGcreateFlags {
		// Flag indicating if geometry based anti-aliasing is used (may not be needed when using MSAA).
		NVG_ANTIALIAS = 1 << 0,
		// Flag indicating if strokes should be drawn using stencil buffer. The rendering will be a little
		// slower, but path overlaps (i.e. self-intersecting or sharp turns) will be drawn just once.
		NVG_STENCIL_STROKES = 1 << 1,
		// Flag indicating that additional debug checks are done.
		NVG_DEBUG = 1 << 2,
	};
	NANOVG_EXPORT NVGcontext* nvgCreateGL3(int flags);
	NANOVG_EXPORT void nvgDeleteGL3(NVGcontext* ctx);
NVGcontext* nvgCreateGL3(int flags)
#elif defined NANOVG_GLES2
void nvgDeleteGL3(NVGcontext* ctx)
#elif defined NANOVG_GLES2