Libraria.NanoVG/NanoVG.cs

using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;
using System.Text;

namespace Libraria.NanoVG {
	[StructLayout(LayoutKind.Sequential)]
	public struct NVGcolor {
		public float R;
		public float G;
		public float B;
		public float A;

		public NVGcolor(float R, float G, float B, float A) {
			this.R = R;
			this.G = G;
			this.B = B;
			this.A = A;
		}

		public NVGcolor(byte R, byte G, byte B, byte A) : this(R / 255.0f, G / 255.0f, B / 255.0f, A / 255.0f) {
		}

		public static implicit operator System.Drawing.Color(NVGcolor Clr) {
			return System.Drawing.Color.FromArgb((int)(Clr.A * 255), (int)(Clr.R * 255), (int)(Clr.G * 255), (int)(Clr.B * 255));
		}

		public static implicit operator NVGcolor(System.Drawing.Color Clr) {
			return new NVGcolor(Clr.R, Clr.G, Clr.B, Clr.A);
		}
	}

	[StructLayout(LayoutKind.Sequential)]
	public unsafe struct NVGpaint {
		public fixed float XForm[6];
		public fixed float Extent[2];
		public float Radius;
		public float Feather;
		public NVGcolor InnerColor;
		public NVGcolor OuterColor;
		public int Image;
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct NVGglyphPosition {
		// Position of the glyph in the input string.
		public IntPtr Str;

		// The x-coordinate of the logical glyph position.
		public float X;

		// The bounds of the glyph shape.
		public float MinX, MaxX;
	}

	[StructLayout(LayoutKind.Sequential)]
	public struct NVGtextRow {
		// Pointer to the input text where the row starts.
		public IntPtr Start;

		// Pointer to the input text where the row ends (one past the last character).
		public IntPtr End;

		// Pointer to the beginning of the next row.
		public IntPtr Next;

		// Logical width of the row.
		public float Width;

		// Actual bounds of the row. Logical with and bounds can differ because of kerning and some parts over extending.
		public float MinX, MaxX;
	}

	public static class NVG {
		const string DllName = "NanoVG";
		const CallingConvention CConv = CallingConvention.Cdecl;
		const CharSet CSet = CharSet.Ansi;

		// Flag indicating if geometry based anti-aliasing is used (may not be needed when using MSAA).
		public const int NVG_ANTIALIAS = 1 << 0;
		// Flag indicating if strokes should be drawn using stencil buffer. The rendering will be a little
		// slower, but path overlaps (i.e. self-intersecting or sharp turns) will be drawn just once.
		public const int NVG_STENCIL_STROKES = 1 << 1;
		// Flag indicating that additional debug checks are done.
		public const int NVG_DEBUG = 1 << 2;

		[DllImport(DllName, EntryPoint = "InitOpenGL", CallingConvention = CConv, CharSet = CSet)]
		public static extern bool InitOpenGL();

		[DllImport(DllName, EntryPoint = "nvgCreateGL3", CallingConvention = CConv, CharSet = CSet)]
		public static extern IntPtr CreateGL3(int flags);

		[DllImport(DllName, EntryPoint = "nvgDeleteGL3", CallingConvention = CConv, CharSet = CSet)]
		public static extern void DeleteGL3(IntPtr ctx);

		[DllImport(DllName, EntryPoint = "nvgBeginFrame", CallingConvention = CConv, CharSet = CSet)]
		public static extern void BeginFrame(IntPtr ctx, int windowWidth, int windowHeight, float devicePixelRatio);
		// NANOVG_EXPORT void nvgBeginFrame(IntPtr ctx, int windowWidth, int windowHeight, float devicePixelRatio);

		[DllImport(DllName, EntryPoint = "nvgCancelFrame", CallingConvention = CConv, CharSet = CSet)]
		public static extern void CancelFrame(IntPtr ctx);
		// NANOVG_EXPORT void nvgCancelFrame(IntPtr ctx);

		[DllImport(DllName, EntryPoint = "nvgEndFrame", CallingConvention = CConv, CharSet = CSet)]
		public static extern void EndFrame(IntPtr ctx);
		// NANOVG_EXPORT void nvgEndFrame(IntPtr ctx);

		[DllImport(DllName, EntryPoint = "nvgGlobalCompositeOperation", CallingConvention = CConv, CharSet = CSet)]
		public static extern void GlobalCompositeOperation(IntPtr ctx, int op);
		// NANOVG_EXPORT void nvgGlobalCompositeOperation(IntPtr ctx, int op);

		[DllImport(DllName, EntryPoint = "nvgGlobalCompositeBlendFunc", CallingConvention = CConv, CharSet = CSet)]
		public static extern void GlobalCompositeBlendFunc(IntPtr ctx, int sfactor, int dfactor);
		// NANOVG_EXPORT void nvgGlobalCompositeBlendFunc(IntPtr ctx, int sfactor, int dfactor);

		[DllImport(DllName, EntryPoint = "nvgGlobalCompositeBlendFuncSeparate", CallingConvention = CConv, CharSet = CSet)]
		public static extern void GlobalCompositeBlendFuncSeparate(IntPtr ctx, int srcRGB, int dstRGB, int srcAlpha, int dstAlpha);
		// NANOVG_EXPORT void nvgGlobalCompositeBlendFuncSeparate(IntPtr ctx, int srcRGB, int dstRGB, int srcAlpha, int dstAlpha);

		[DllImport(DllName, EntryPoint = "nvgRGB", CallingConvention = CConv, CharSet = CSet)]
		public static extern NVGcolor RGB(byte r, byte g, byte b);
		// NANOVG_EXPORT NVGcolor nvgRGB(unsigned char r, unsigned char g, unsigned char b);

		[DllImport(DllName, EntryPoint = "nvgRGBf", CallingConvention = CConv, CharSet = CSet)]
		public static extern NVGcolor RGBf(float r, float g, float b);
		// NANOVG_EXPORT NVGcolor nvgRGBf(float r, float g, float b);

		[DllImport(DllName, EntryPoint = "nvgRGBA", CallingConvention = CConv, CharSet = CSet)]
		public static extern NVGcolor RGBA(byte r, byte g, byte b, byte a);
		// NANOVG_EXPORT NVGcolor nvgRGBA(unsigned char r, unsigned char g, unsigned char b, unsigned char a);

		[DllImport(DllName, EntryPoint = "nvgRGBAf", CallingConvention = CConv, CharSet = CSet)]
		public static extern NVGcolor RGBAf(float r, float g, float b, float a);
		// NANOVG_EXPORT NVGcolor nvgRGBAf(float r, float g, float b, float a);

		[DllImport(DllName, EntryPoint = "nvgLerpRGBA", CallingConvention = CConv, CharSet = CSet)]
		public static extern NVGcolor LerpRGBA(NVGcolor c0, NVGcolor c1, float u);
		// NANOVG_EXPORT NVGcolor nvgLerpRGBA(NVGcolor c0, NVGcolor c1, float u);

		[DllImport(DllName, EntryPoint = "nvgTransRGBA", CallingConvention = CConv, CharSet = CSet)]
		public static extern NVGcolor TransRGBA(NVGcolor c0, byte a);
		// NANOVG_EXPORT NVGcolor nvgTransRGBA(NVGcolor c0, unsigned char a);

		[DllImport(DllName, EntryPoint = "nvgTransRGBAf", CallingConvention = CConv, CharSet = CSet)]
		public static extern NVGcolor TransRGBAf(NVGcolor c0, float a);
		// NANOVG_EXPORT NVGcolor nvgTransRGBAf(NVGcolor c0, float a);

		[DllImport(DllName, EntryPoint = "nvgHSL", CallingConvention = CConv, CharSet = CSet)]
		public static extern NVGcolor HSL(float h, float s, float l);
		// NANOVG_EXPORT NVGcolor nvgHSL(float h, float s, float l);

		[DllImport(DllName, EntryPoint = "nvgHSLA", CallingConvention = CConv, CharSet = CSet)]
		public static extern NVGcolor HSLA(float h, float s, float l, byte a);
		// NANOVG_EXPORT NVGcolor nvgHSLA(float h, float s, float l, unsigned char a);

		[DllImport(DllName, EntryPoint = "nvgSave", CallingConvention = CConv, CharSet = CSet)]
		public static extern void Save(IntPtr ctx);
		// NANOVG_EXPORT void nvgSave(IntPtr ctx);

		[DllImport(DllName, EntryPoint = "nvgRestore", CallingConvention = CConv, CharSet = CSet)]
		public static extern void Restore(IntPtr ctx);
		// NANOVG_EXPORT void nvgRestore(IntPtr ctx);

		[DllImport(DllName, EntryPoint = "nvgReset", CallingConvention = CConv, CharSet = CSet)]
		public static extern void Reset(IntPtr ctx);
		// NANOVG_EXPORT void nvgReset(IntPtr ctx);

		[DllImport(DllName, EntryPoint = "nvgStrokeColor", CallingConvention = CConv, CharSet = CSet)]
		public static extern void StrokeColor(IntPtr ctx, NVGcolor color);
		// NANOVG_EXPORT void nvgStrokeColor(IntPtr ctx, NVGcolor color);

		[DllImport(DllName, EntryPoint = "nvgStrokePaint", CallingConvention = CConv, CharSet = CSet)]
		public static extern void StrokePaint(IntPtr ctx, NVGpaint paint);
		// NANOVG_EXPORT void nvgStrokePaint(IntPtr ctx, NVGpaint paint);

		[DllImport(DllName, EntryPoint = "nvgFillColor", CallingConvention = CConv, CharSet = CSet)]
		public static extern void FillColor(IntPtr ctx, NVGcolor color);
		// NANOVG_EXPORT void nvgFillColor(IntPtr ctx, NVGcolor color);

		[DllImport(DllName, EntryPoint = "nvgFillPaint", CallingConvention = CConv, CharSet = CSet)]
		public static extern void FillPaint(IntPtr ctx, NVGpaint paint);
		// NANOVG_EXPORT void nvgFillPaint(IntPtr ctx, NVGpaint paint);

		[DllImport(DllName, EntryPoint = "nvgMiterLimit", CallingConvention = CConv, CharSet = CSet)]
		public static extern void MiterLimit(IntPtr ctx, float limit);
		// NANOVG_EXPORT void nvgMiterLimit(IntPtr ctx, float limit);

		[DllImport(DllName, EntryPoint = "nvgStrokeWidth", CallingConvention = CConv, CharSet = CSet)]
		public static extern void StrokeWidth(IntPtr ctx, float size);
		// NANOVG_EXPORT void nvgStrokeWidth(IntPtr ctx, float size);

		[DllImport(DllName, EntryPoint = "nvgLineCap", CallingConvention = CConv, CharSet = CSet)]
		public static extern void LineCap(IntPtr ctx, int cap);
		// NANOVG_EXPORT void nvgLineCap(IntPtr ctx, int cap);

		[DllImport(DllName, EntryPoint = "nvgLineJoin", CallingConvention = CConv, CharSet = CSet)]
		public static extern void LineJoin(IntPtr ctx, int join);
		// NANOVG_EXPORT void nvgLineJoin(IntPtr ctx, int join);

		[DllImport(DllName, EntryPoint = "nvgGlobalAlpha", CallingConvention = CConv, CharSet = CSet)]
		public static extern void GlobalAlpha(IntPtr ctx, float alpha);
		// NANOVG_EXPORT void nvgGlobalAlpha(IntPtr ctx, float alpha);

		[DllImport(DllName, EntryPoint = "nvgResetTransform", CallingConvention = CConv, CharSet = CSet)]
		public static extern void ResetTransform(IntPtr ctx);
		// NANOVG_EXPORT void nvgResetTransform(IntPtr ctx);

		[DllImport(DllName, EntryPoint = "nvgTransform", CallingConvention = CConv, CharSet = CSet)]
		public static extern void Transform(IntPtr ctx, float a, float b, float c, float d, float e, float f);
		// NANOVG_EXPORT void nvgTransform(IntPtr ctx, float a, float b, float c, float d, float e, float f);

		[DllImport(DllName, EntryPoint = "nvgTranslate", CallingConvention = CConv, CharSet = CSet)]
		public static extern void Translate(IntPtr ctx, float x, float y);
		// NANOVG_EXPORT void nvgTranslate(IntPtr ctx, float x, float y);

		[DllImport(DllName, EntryPoint = "nvgRotate", CallingConvention = CConv, CharSet = CSet)]
		public static extern void Rotate(IntPtr ctx, float angle);
		// NANOVG_EXPORT void nvgRotate(IntPtr ctx, float angle);

		[DllImport(DllName, EntryPoint = "nvgSkewX", CallingConvention = CConv, CharSet = CSet)]
		public static extern void SkewX(IntPtr ctx, float angle);
		// NANOVG_EXPORT void nvgSkewX(IntPtr ctx, float angle);

		[DllImport(DllName, EntryPoint = "nvgSkewY", CallingConvention = CConv, CharSet = CSet)]
		public static extern void SkewY(IntPtr ctx, float angle);
		// NANOVG_EXPORT void nvgSkewY(IntPtr ctx, float angle);

		[DllImport(DllName, EntryPoint = "nvgScale", CallingConvention = CConv, CharSet = CSet)]
		public static extern void Scale(IntPtr ctx, float x, float y);
		// NANOVG_EXPORT void nvgScale(IntPtr ctx, float x, float y);

		[DllImport(DllName, EntryPoint = "nvgCurrentTransform", CallingConvention = CConv, CharSet = CSet)]
		public static extern void CurrentTransform(IntPtr ctx, float[] xform);
		// NANOVG_EXPORT void nvgCurrentTransform(IntPtr ctx, float* xform);

		[DllImport(DllName, EntryPoint = "nvgTransformIdentity", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TransformIdentity(float[] dst);
		// NANOVG_EXPORT void nvgTransformIdentity(float* dst);

		[DllImport(DllName, EntryPoint = "nvgTransformTranslate", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TransformTranslate(float[] dst, float tx, float ty);
		// NANOVG_EXPORT void nvgTransformTranslate(float* dst, float tx, float ty);

		[DllImport(DllName, EntryPoint = "nvgTransformScale", CallingConvention = CConv, CharSet = CSet)]
		public static extern void TransformScale(float[] dst, float sx, float sy);
		// NANOVG_EXPORT void nvgTransformScale(float* dst, float sx, float sy);
